--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"ng serve\" \"json-server --watch db.json\" ",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,9 +22,14 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/entity": "^6.1.2",
     "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
+    "concurrently": "^4.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.14.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
